Remove duplication in test code
Remove the insertDummyAnonymizableApplicationIds() function from
TestCommon.java and use ApplicationDao.insertToAnonymizableApplication()
instead now that it is available for the same functionality